--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+a{
+    text-decoration: none;
+    
+}
 html{
     font-size: 62.5%;
 }
@@ -174,9 +177,7 @@ body{
 }
 .Subs{
     color:var(--Gray-Color, #AAA);
-
-  
-    display: flex;
+     display: flex;
     flex-direction: column;
 }
 .Subs h3{
@@ -185,6 +186,9 @@ body{
  padding: 0.5rem 1rem;
  font-size: 1.4rem;
 }
+
+
+
 
 /*******************************************************************/
 .right{
@@ -218,46 +222,52 @@ body{
 .videos{
     background-color:#000000;
     width: 100%;
-   padding: 2rem 2rem;
+   padding: 2rem 1rem;
    display: flex;
-   justify-content: space-between;
+    gap:3rem;
    flex-wrap: wrap;
    height: 100vh;
    overflow-y: auto;
+   
 
 }
 .video-container{
     display: flex;
     flex-direction: column;
-    width: 22%;
+    width: 30%;
+    height: max-content;
     justify-content: space-between;
     position: relative;
-
-}
-.video{
-    width: 100%;
-    height: 50%;
-}
-.video img{
-  width: 100%;
-  overflow: hidden;
+  /* background-color: red; */
+   
     
 }
+.video {
+    width: 100%;
+    height: 30%;
+    /* background-color: yellow; */
+}
+.video video{
+    width: 100%;
+}
+
 .video-info{
   width: 100%;
   display: flex;
   background-color: black;
   justify-content: space-around;
-  height: 40%;
+ height: max-content;
 padding-top: 1rem;
+flex-wrap: no-wrap;
+/* background-color: red; */
 }
 
 .channel-logo img{
-    width: 3rem;
-    height: auto;
-    border-radius: 50%;
+    width: 4rem;
+    height: 5rem;
+    border-radius: 80%;
+    background-color: red;
     
-
 }
 .video-title{
     width: 80%;
@@ -265,6 +275,8 @@ padding-top: 1rem;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    height: 100%;
+    /* background-color: yellow; */
 }
 #title{
     font-size: 1.2rem;
@@ -279,7 +291,7 @@ padding-top: 1rem;
 }
 .duration{
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 85%;
     background-color: black;
     color: #FFFFFF;
